# kata_bank_tool

./: .gitignore  LICENCE  README.md  setup.cfg
src/kbt/: account.py  digit.py  exceptions.py  file_accounts.py  fixer.py  helpers.py  mapper.py  process_helper.py  validator.py
src/kbt.egg-info/: PKG-INFO  SOURCES.txt
test/: test_account.py  test_digit.py  test_file_account.py  test_fixer.py  test_helpers.py  test_mapper.py  test_validators.py
