[metadata]
name = kbt
version = 0.0.4
author = Jose Miguel Gemio
author_email = miguelitogemio96@gmail.com
description = It is a tool that allows convert a list of string that represents lines of digital digits and map them into account numbers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src